<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="#E6E6E6"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp">
    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_weight="5"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextLabel">
        <EditText
            android:textSize="25sp"
            android:id="@+id/etAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_account"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintTextAppearance="@style/TextLabel">
        <EditText
            android:inputType="textPassword"
            android:textSize="25sp"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            />
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4"
        >
        <Button
            android:id="@+id/btLogin"
            android:text="@string/log_in"
            android:textSize="20sp"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_weight="2"/>
        <Button
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_width="90dp"
            android:layout_height="70dp"
            android:layout_weight="2"
            android:onClick="onCancelClick"/>

    </LinearLayout>
</LinearLayout>