<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="idv.allen.gameball.MainActivity"
    android:background="#E6E6E6"
    android:orientation="vertical"
    android:weightSum="10">
    <!--test-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BD3039"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="5"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <android.support.v7.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardElevation="10dp"
                android:background="#E6E6E6"
                android:id="@+id/view2"
                app:cardCornerRadius="50dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
                <ImageView
                    android:id="@+id/ivMemPic"
                    android:layout_width="match_parent"
                    android:layout_height="98dp"
                    android:layout_gravity="center_vertical"
                    android:layout_alignParentTop="true"
                    android:src="@drawable/visitor" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="4">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="21dp"
                    android:text="歡迎"
                    android:textColor="#ffffff"
                    android:textSize="25sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvLogin"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:onClick="onLoginTextClick"
                        android:clickable="true"
                        android:text="@string/go_log_in"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"/>
                    <TextView
                        android:id="@+id/tvLogout"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:onClick="onLogoutTextClick"
                        android:clickable="true"
                        android:text="我要登出 >"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvRegister"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:onClick="onRegisterTextClick"
                        android:clickable="true"
                        android:text="@string/go_register"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>
                    <TextView
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:text="       "
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="14dp">
        <!-- row 1 -->
        <!-- col 1 -->
        <!--比賽專區-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:foreground="@drawable/selector_foreground"
            android:clickable="true"
            android:onClick="onTournCardClick">
            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <ImageView
                    android:src="@drawable/competition"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_weight="8"/>

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tournament"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_weight="2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!-- row 1 -->
        <!-- col 2 -->
        <!--會員專區-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:foreground="@drawable/selector_foreground"
            android:clickable="true"
            android:onClick="onMemberCardClick">
            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <ImageView
                    android:src="@drawable/member"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_weight="8"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/membership"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!-- row 2 -->
        <!-- col 1 -->
        <!--隊伍專區-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:foreground="@drawable/selector_foreground"
            android:clickable="true"
            android:onClick="onTeamsCardClick">
            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <ImageView
                    android:src="@drawable/team"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_weight="8"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="隊伍專區"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <!-- row 2 -->
        <!-- col 2 -->
        <!--賽事管理-->
        <android.support.v7.widget.CardView
            android:layout_height="0dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            android:foreground="@drawable/selector_foreground"
            android:clickable="true"
            android:onClick="onManageCardClick">
            <LinearLayout
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:weightSum="10">

                <ImageView
                    android:src="@drawable/manage"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="150dp"
                    android:layout_height="95dp"
                    android:layout_weight="8"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/management"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>


    </GridLayout>




</LinearLayout>



